--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,8 @@
     "autoload": {
         "psr-4": {
             "Qb3ti\\ComplexProperty\\": ""
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests"
-        }
+        },
+        "exclude-from-classmap": ["/tests/"]
     },
     "authors": [
         {
